# password-vault-202212

./: .gitignore  LICENSE  README.md  main_gui.py  main_gui.spec  pyproject.toml
configs/: python_logging.json
deploy/: README.md  deploy.sh  main_gui.spec
src/: main_cli.py  main_gui.py  metadata.json  requirements.txt
src/data_encryption/: cipher_helper.py
src/file_manipulation/: directory_handler.py  directory_handler_with_encryption.py  directory_handler_with_file_hash.py  directory_handler_with_replication.py
src/fsm/: enum_fsm.py
src/input_manipulation/: input_helper.py
src/password_vault/: password_vault.py  password_vault_gui.py
src/util/: dict_helper.py  script_helper.py
test/: README.md
test/file_manipulation/: test_directory_handler_with_encryption.py  test_directory_handler_with_replication.py
